# guvcview

./: .gitignore  .travis.yml  ChangeLog  Dockerfile  Makefile.am  README.md  bootstrap.sh  configure.ac
data/: Makefile.am  guvcview.1  guvcview.appdata.xml.in.in  guvcview.desktop.in.in  guvcview.in.in
data/icons/: Makefile.am
guvcview/: Makefile.am  config.c  config.h  core_io.c  gui.c  gui.h  gui_gtk3.c  gui_gtk3.h  gui_gtk3_audioctrls.c  gui_gtk3_callbacks.c  gui_gtk3_callbacks.h  gui_gtk3_h264ctrls.c  gui_gtk3_menu.c  gui_gtk3_v4l2ctrls.c  gui_gtk3_videoctrls.c  gui_qt5.cpp  gui_qt5.h  gui_qt5.hpp  gui_qt5_audioctrls.cpp  gui_qt5_callbacks.cpp  gui_qt5_h264ctrls.cpp  gui_qt5_menu.cpp  gui_qt5_v4l2ctrls.cpp  gui_qt5_videoctrls.cpp  guvcview.c  options.c  options.h  video_capture.c  video_capture.h
gview_audio/: Makefile.am  audio.c  audio_fx.c  audio_portaudio.h  audio_pulseaudio.h  core_time.c  gviewaudio.h
gview_encoder/: Makefile.am  encoder.c  encoder.h  file_io.h  gviewencoder.h  matroska.c  muxer.c  stream_io.c  video_codecs.c
gview_render/: Makefile.am  gviewrender.h  render.c  render.h  render_fx.c  render_osd_vu_meter.c  render_sdl2.c  render_sdl2.h  render_sfml.cpp  render_sfml.h  render_sfml.hpp
gview_v4l2core/: Makefile.am  colorspaces.c  colorspaces.h  control_profile.c  frame_decoder.c  frame_decoder.h  gviewv4l2core.h  jpeg_decoder.c  save_image_bmp.c  save_image_jpeg.c  soft_autofocus.c  uvc_h264.c  v4l2_controls.c  v4l2_core.c  v4l2_devices.c
includes/: gview.h
m4/: ChangeLog  gsl.m4
pkgconfig/: libgviewaudio.pc.in  libgviewencoder.pc.in  libgviewrender.pc.in  libgviewv4l2core.pc.in
po/: ChangeLog  Makevars  POTFILES  POTFILES.in  POTFILES.skip  bg.po  bs.po  cs.po  da.po  de.po  en_AU.po  es.po  eu.po  fo.po  fr.po  gl.po  guvcview.pot  he.po  hr.po  it.po  ja.po  linguas  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sr.po  tr.po  uk.po  zh_TW.po
po/gview_v4l2core/: Makefile.in.in  Makevars  POTFILES.in  bg.po  bs.po  cs.po  da.po  de.po  en_AU.po  es.po  eu.po  fo.po  fr.po  gl.po  he.po  hr.po  it.po  ja.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sr.po  tr.po  uk.po  zh_TW.po
